# fastapi-tortoise-api

./: New Collection.postman_collection.json  README.md  aerich_commands.txt  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  pyproject.toml  requirements.txt
app/: main.py
app/configs/: db.py  settings.py
app/customer/: models.py  routes.py  schemas.py
app/order/: enum.py  models.py  routes.py  schemas.py  serializer.py
migrations/models/: 0_20251030235520_init.py
